net-sf-ucanaccess-fork: Modernize codebase