@@ -2,12 +2,11 @@ package net.ucanaccess.test.util;
 
 import org.junit.runners.Parameterized;
 
-import java.util.Arrays;
 import java.util.List;
 
 public abstract class AccessVersionAllTest extends UcanaccessTestBase {
 
-    private static final List<Object[]> VERSIONS = Arrays.asList(
+    private static final List<Object[]> VERSIONS = List.of(
         new Object[] {AccessVersion.V2000},
         new Object[] {AccessVersion.V2003},
         new Object[] {AccessVersion.V2007},
